# ifrs9-ecl-engine

./: .gitignore  LIMITATIONS.md  MODEL_ASSUMPTIONS.md  README.md  fix_and_run.sh  pipeline.py  pipeline_future.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: dcf_params.yml  policy.yml  portfolio_params.yml  scenario_weights.yml  workout_lgd.yml
dashboards/: app.py  app_phase6_patch.py
data/curated/: account_explain_asof_2019-12-31.parquet  account_explain_asof_2024-12-31.parquet  accounts.parquet  driver_decomposition_2019-12-31.csv  driver_decomposition_2024-12-31.csv  ecl_dcf_asof_2024-12-31.parquet  ecl_output_asof_2019-12-31.parquet  ecl_output_asof_2024-12-31.parquet  ecl_with_overlays.parquet  macro_scenarios_monthly.parquet  overlay_audit.parquet  overlay_top_accounts_OVR_001.parquet  overlay_top_accounts_OVR_002.parquet  overlays.csv  pd_anchor_shift_asof_2019-12-31.parquet  pd_anchor_shift_asof_2024-12-31.parquet  pd_scores_asof_2019-12-31.parquet  pd_scores_asof_2024-12-31.parquet  scenario_contribution_2019-12-31.csv  scenario_contribution_2024-12-31.csv  scenario_pd_summary_asof_2019-12-31.csv  scenario_pd_summary_asof_2024-12-31.csv  scenario_severity_asof_2019-12-31.csv  (+5 more)
models/: pd_feature_schema.json  pd_logit.joblib
reports/: ecl_backtest_2024-12-31.csv  pd_anchor_monitoring_2024-12-31.csv  pd_anchor_shift_2019-12-31.csv  pd_anchor_shift_2024-12-31.csv  pd_monitoring_2024-12-31.csv  pd_validation_metrics.csv
tests/: conftest.py  test_core_invariants.py  test_sanity.py
(+26 files in other folders)
