[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ifrs9-ecl-engine"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\\.pyi?$'
exclude = '''
/(
    \\.git
  | \\.venv
  | \\.pytest_cache
  | __pycache__
  | data
  | models
  | reports
)/
'''

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by black)
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "data",
    "models",
    "reports",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
